--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Christian Tejada, Philip Vitale, Kevin Poli",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "mongodb": "^3.0.7",
+    "node-uuid": "^1.4.8"
+  }
 }
